--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,11 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World section: %1$d</string>
     <string name="animate">Animate</string>
-    <string name="animation_duration">Duration %d</string>
+    <string name="animation_duration">Duration %dms</string>
+    <string name="reset">Reset</string>
+    <string name="alpha">alpha</string>
+    <string name="rotate">rotate</string>
+    <string name="scale">scale</string>
+    <string name="translate">translate</string>
+    <string name="set">set</string>
 </resources>
