--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">AnimTest</string>
-    <string name="action_settings">Settings</string>
+    <string name="fps">Show Fps</string>
     <string name="section_format">Hello World section: %1$d</string>
     <string name="animate">Animate</string>
     <string name="animation_duration">Duration %dms</string>
